# Medical-DataBase-Secured-By-Face-Recognition

./: CMakeLists.txt  face_detection.cpp  face_recognition.cpp  retrieve_person_data.cpp  store_person_data.cpp
